<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/image_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/blur_tip"
        android:textColor="@color/textcolor"
        android:textSize="18dp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/tutorial" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:src="@drawable/bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/new_button"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/dont_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_5"
            android:text="@string/dont_show"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/dismiss"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_20"
        android:gravity="center"
        android:text="@string/okay"
        android:textColor="@color/textcolor"
        android:textStyle="bold" />
</LinearLayout>
