<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayOut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:background="@color/hearder"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="6">

        <LinearLayout
            android:id="@+id/newBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_marginTop="3dp"
                android:src="@drawable/pick_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/image"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_marginTop="3dp"
                android:src="@drawable/reset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/reset"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/undoBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_marginTop="3dp"
                android:src="@drawable/undo_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/undo"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fitBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_marginTop="3dp"
                android:src="@drawable/fit_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/fit"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/offsetBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:layout_marginTop="3dp"
                android:src="@drawable/tap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bursh"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save_button"
            android:textColor="@color/bursh_ok_but"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/imageViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <com.BestofallPhotography.BlurBGPhotoEditor.BlurBackgroundDSLR.customeView.TouchImageView
            android:id="@+id/drawingImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/image_bg"
            android:scaleType="matrix" />

        <com.BestofallPhotography.BlurBGPhotoEditor.BlurBackgroundDSLR.customeView.BrushView
            android:id="@+id/magnifyingView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/brush_view_bg_repeat"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:padding="100dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/blur_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/blur_text"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/indicator_corner_bg"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="#ffffffff"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/preview"
            android:layout_width="@dimen/dimen_90"
            android:layout_height="@dimen/dimen_90"
            android:layout_margin="@dimen/dimen_10"
            android:background="#d2000000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/offsetLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120"
            android:background="@color/hearder"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/view_grediant" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/adjust"
                android:textColor="@color/bursh_sel"
                android:textSize="20dp" />

            <SeekBar
                android:id="@+id/offsetBar"
                style="@style/SeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:paddingRight="15dp"
                android:paddingBottom="3dp"
                android:thumb="@drawable/seekbar_but" />

            <TextView
                android:id="@+id/offsetOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/done"
                android:textColor="@color/bursh_ok_but"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/offsetDemo"
            android:layout_width="@dimen/dimen_60"
            android:layout_height="@dimen/dimen_60"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hearder"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/widthcontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widthText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:paddingLeft="10dp"
                    android:text="@string/burshsize"
                    android:textColor="@color/bursh_sel" />

                <SeekBar
                    android:id="@+id/widthSeekBar"
                    style="@style/SeekBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:maxHeight="2dp"
                    android:minHeight="2dp"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:thumb="@drawable/seekbar_but" />

                <TextView
                    android:id="@+id/opacityText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="2"
                    android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:paddingLeft="5dp"
                    android:text="@string/blurriness"
                    android:textColor="@color/bursh_sel" />

                <SeekBar
                    android:id="@+id/blurrinessSeekBar"
                    style="@style/SeekBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:maxHeight="2dp"
                    android:minHeight="2dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="13dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="13dp"
                    android:thumb="@drawable/seekbar_but" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_70"
        android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:background="@color/hearder"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/clear_razing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:src="@drawable/erase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/clear"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bluring_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:src="@drawable/blurnew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/bluring"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tap_pic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:src="@drawable/tap_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/pan"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:layout_gravity="center"
        ads:adUnitId="@string/banner_google"></com.google.android.gms.ads.AdView>

</LinearLayout>
