<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65">


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_google"></com.google.android.gms.ads.AdView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/start_blur"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:background="@drawable/shadow"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/blur1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/blur"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textsize" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shape_blur"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/changle_rounded"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/shape" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shape"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textsize" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/myCreation"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:background="@drawable/photo_rounded"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/creation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myCreation"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textsize" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/moreApps"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ads_rounded_button"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/newimage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="top"
                        android:src="@drawable/newads" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="15dp">

                        <ImageView
                            android:id="@+id/mini_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/more" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moreApps"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textsize" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="top"
                            android:layout_marginRight="7dp"
                            android:alpha="0.5"
                            android:src="@drawable/ads" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="Privacy Policy"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:onClick="PPOnClick" />
    </RelativeLayout>
</LinearLayout>